--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,50 +4,84 @@
 
 @tailwind utilities;
 
-body{
-    padding:0;
-    margin:0;
+body {
+    padding-bottom: 100px; /* Height of the footer */
+    padding: 0;
+    margin: 0;
     font-family: Arial, serif;
     line-height: 2.2em;
 }
-a{
-    color:hotpink;
-}
-a:hover{
-    text-decoration: underline;
-}
-h1{
-    font-size:2em;
-    margin-bottom:0.5em;
-}
-h2{
-    font-size:1.5em;
-    margin:0.5em 0;
-    border-bottom:1px solid #CCC;
-}
-ul{
-    padding-left:0.5em;
-}
-ul li:before{
-    height:10px;
-    width:10px;
-    padding-right:5px;
-    font-weight: 900;
-    color:red;
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
-.blog-post-content ul li:before{
+.page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+.main-container {
+    padding-bottom: 2.5rem
+}
+
+a {
+    color: hotpink;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+h1 {
+    font-size: 2em;
+    margin-bottom: 0.5em;
+}
+
+h2 {
+    font-size: 1.5em;
+    margin: 0.5em 0;
+    border-bottom: 1px solid #CCC;
+}
+
+ul {
+    padding-left: 0.5em;
+}
+
+ul li:before {
+    height: 10px;
+    width: 10px;
+    padding-right: 5px;
+    font-weight: 900;
+    color: red;
+}
+
+.blog-post-content ul li:before {
     content: '🚫 ';
 }
-.blog-post-content ul:first-of-type li:before{
+
+.blog-post-content ul:first-of-type li:before {
     content: '✅ ';
 }
-header.bg{
+
+header.bg {
     background-color: theme('colors.howtocodewell');
 }
-header a:hover{
-    color:hotpink;
+
+header a:hover {
+    color: hotpink;
 }
-.text-white{
-    color:#FFF;
+
+.text-white {
+    color: #FFF;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
 }
